--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
+<!--
+layout: default
+title: "hskimim's blog"
+
+<div class="introduction">
+
+<p><img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/Egon_Schiele_-_Self-Portrait_with_Physalis_-_Google_Art_Project.jpg" border="0"></a></p>
+  <h6> Self-portrait with physalis - Egon Schiele </h6>
+</div>
+<hr> -->
+
 ---
 layout: default
 title: "hskimim's blog"
 ---
 <div class="introduction">
 
-<p><img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/Egon_Schiele_-_Self-Portrait_with_Physalis_-_Google_Art_Project.jpg" border="0"></a></p>
-  <h6> Self-portrait with physalis - Egon Schiele </h6>
+<p><img src="https://commons.wikimedia.org/wiki/File:Gustav_Klimt_-_Der_Kuss_(Liebespaar)_-_912_-_%C3%96sterreichische_Galerie_Belvedere.jpg#/media/File:Gustav_Klimt_-_Der_Kuss_(Liebespaar)_-_912_-_%C3%96sterreichische_Galerie_Belvedere.jpg" border="0"></a></p>
+  <h6> Gustav Klimt - Der Kuss (Liebespaar) - 912 - Österreichische Galerie Belvedere </h6>
 </div>
-
 <hr>
