--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: "hskimim's blog"
 ---
 <div class="introduction">
 
-<p><img src="https://commons.wikimedia.org/w/index.php?search=der+kuss&title=Special%3ASearch&go=Go&ns0=1&ns6=1&ns12=1&ns14=1&ns100=1&ns106=1#/media/File:Klimt_-_Der_Kuss.jpeg" border="0"></a></p>
+<p><img src="https://commons.wikimedia.org/wiki/File:Klimt_-_Der_Kuss.jpeg#/media/File:Klimt_-_Der_Kuss.jpeg" border="0"></a></p>
   <h6> Gustav Klimt - Der Kuss (Liebespaar) - 912 - Österreichische Galerie Belvedere </h6>
 </div>
 <hr>
