--- a/index.html
+++ b/index.html
@@ -1,21 +1,11 @@
-<!--
+---
 layout: default
-title: "hskimim's blog"
-
+title: "TechY's blog"
+---
 <div class="introduction">
 
 <p><img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/Egon_Schiele_-_Self-Portrait_with_Physalis_-_Google_Art_Project.jpg" border="0"></a></p>
   <h6> Self-portrait with physalis - Egon Schiele </h6>
 </div>
-<hr> -->
 
----
-layout: default
-title: "hskimim's blog"
----
-<div class="introduction">
-
-<p><img src="https://commons.wikimedia.org/wiki/File:Klimt_-_Der_Kuss.jpeg#/media/File:Klimt_-_Der_Kuss.jpeg" border="0"></a></p>
-  <h6> Gustav Klimt - Der Kuss (Liebespaar) - 912 - Österreichische Galerie Belvedere </h6>
-</div>
 <hr>
