--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@ title: "TechY's blog"
 ---
 <div class="introduction">
 
-<p><img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/Egon_Schiele_-_Self-Portrait_with_Physalis_-_Google_Art_Project.jpg" border="0"></a></p>
+<p><img src="https://commons.m.wikimedia.org/wiki/Main_Page#/media/File%3AMetro_de_S%C3%A3o_Paulo%2C_Luz_Station%2C_Brazil.jpg" border="0"></a></p>
   <h6> Self-portrait with physalis - Egon Schiele </h6>
 </div>
 
 <hr>
+
+
+<!-- https://upload.wikimedia.org/wikipedia/commons/b/b8/Egon_Schiele_-_Self-Portrait_with_Physalis_-_Google_Art_Project.jpg -->
