--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@ title: "TechY's blog"
 ---
 <div class="introduction">
 
-<p><img src="https://commons.m.wikimedia.org/wiki/Main_Page#/media/File%3AMetro_de_S%C3%A3o_Paulo%2C_Luz_Station%2C_Brazil.jpg" border="0"></a></p>
-  <h6> Self-portrait with physalis - Egon Schiele </h6>
+<p><img src="https://commons.wikimedia.org/wiki/File:Metro_de_S%C3%A3o_Paulo,_Luz_Station,_Brazil.jpg" border="0"></a></p>
+  <h6> AMetro de Paulo Luz Station Brazil </h6>
 </div>
 
 <hr>
 
 
 <!-- https://upload.wikimedia.org/wikipedia/commons/b/b8/Egon_Schiele_-_Self-Portrait_with_Physalis_-_Google_Art_Project.jpg -->
+<!-- Self-portrait with physalis - Egon Schiele -->
