introduction image is changed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: "TechY's blog"
 ---
 <div class="introduction">
 
-<p><img src="https://commons.wikimedia.org/wiki/File:Metro_de_S%C3%A3o_Paulo,_Luz_Station,_Brazil.jpg" border="0"></a></p>
+<p><img src="https://upload.wikimedia.org/wikipedia/commons/0/00/Metro_de_S%C3%A3o_Paulo%2C_Luz_Station%2C_Brazil.jpg" border="0"></a></p>
   <h6> AMetro de Paulo Luz Station Brazil </h6>
 </div>
 
