The introduction image is changed to 'The creation of Adam'

--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@ title: "TechY's blog"
 ---
 <div class="introduction">
 
-<p><img src="https://upload.wikimedia.org/wikipedia/commons/0/00/Metro_de_S%C3%A3o_Paulo%2C_Luz_Station%2C_Brazil.jpg" border="0"></a></p>
-  <h6> AMetro de Paulo Luz Station Brazil </h6>
+<p><img src="https://commons.wikimedia.org/w/index.php?search=the+creation+of+adam&title=Special%3ASearch&go=Go&ns0=1&ns6=1&ns12=1&ns14=1&ns100=1&ns106=1#/media/File:The_Creation_of_Adam.jpg" border="0"></a></p>
+  <h6> The creation of Adam - Michelangelo Buonarroti </h6>
 </div>
 
 <hr>
-
-
-<!-- https://upload.wikimedia.org/wikipedia/commons/b/b8/Egon_Schiele_-_Self-Portrait_with_Physalis_-_Google_Art_Project.jpg -->
-<!-- Self-portrait with physalis - Egon Schiele -->
