The introduction image is changed to 'The creation of Adam'

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: "TechY's blog"
 ---
 <div class="introduction">
 
-<p><img src="https://commons.wikimedia.org/w/index.php?search=the+creation+of+adam&title=Special%3ASearch&go=Go&ns0=1&ns6=1&ns12=1&ns14=1&ns100=1&ns106=1#/media/File:The_Creation_of_Adam.jpg" border="0"></a></p>
+<p><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/The_Creation_of_Adam.jpg" border="0"></a></p>
   <h6> The creation of Adam - Michelangelo Buonarroti </h6>
 </div>
 
