The introduction image is changed

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ title: "TechY's blog"
 ---
 <div class="introduction">
 
-<p><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/The_Creation_of_Adam.jpg" border="0"></a></p>
-  <h6> The creation of Adam - Michelangelo Buonarroti </h6>
+<p><img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/SelbstPortrait_VG2.jpg" border="0"></a></p>
+  <h6> SelbstPortrait - Vincent Van Gogh </h6>
 </div>
 
 <hr>
